--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css" />
   <script src="game.js"></script>
@@ -83,21 +84,15 @@
   <div id="gamesn" class="container-fluid d-none">
     <!-- <div id="gamesn" class="container-fluid d-none"> -->
     <div class="row min-vh-100 flex-column justify-content-center align-items-center">
-      <div class="flex-row pt-2">
-        <div class="d-flex mb-2 justify-content-between align-items-center">
-          <button onclick="back()" class="mx-1 mt-1 p-2 btn btn-lg btnstl sidebtn">Back</button>
-          <button id="soundButton" onclick="soundTurn(), sound(1)" class="mx-1 mt-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
-        </div>
-      </div>
       <div class="d-flex justify-content-center">
         <img class="" src="images/Untitled_Artwork.png" alt="emoji"/>
       </div>
       <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center">
         <div class="col d-flex flex-column justify-content-center">
-          <div class="p-2 shadow rounded align-self-center justify-content-center mw-50" style="background-color: #9876c9">
-            <div class="input-group mb-3 shadow-sm">
-              <span id="task" class="input-group-text px-2 justify-content-center btnstl" style="width: 22vw;"></span>
-              <input id="userInput" type="number" class="form-control btnstl" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2" readonly>
+          <div class="col p-2 shadow rounded align-self-center justify-content-center mw-50" style="background-color: #9876c9">
+            <div class="input-group mb-3 shadow-sm mw-100">
+              <input id="task" class="col form-control text-center btnstl shadow-none" readonly>
+              <input id="userInput" type="number" class="col form-control btnstl shadow-none" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2" readonly>
             </div>
             <div class="d-flex">
               <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
@@ -147,8 +142,8 @@
             </div>
             
           </div>
-          <div class="pt-2">
-              <div class="progress">
+          <div class="col pt-2 ">
+              <div class="progress" style="border: 3px solid #4a2375; background-color: #9876c9">
                 <div id="progressP" class="progress-bar-animated bg-success" role="progressbar" style="width: 0%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
                 <div id="progressN" class="progress-bar-animated bg-danger" role="progressbar" style="width: 0%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -160,7 +155,33 @@
           </div>
         </div>
       </div>
+      <div class="d-flex pb-1 flex-column align-items-end align-self-end fixed-bottom">
+        <div class="d-flex mb-2">
+          <button id="soundButton" onclick="soundTurn(), sound(1)" class="m-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
+        </div>
+      </div>
     </div>
+    <!-- End game results modal -->
+    <div class="modal modal-lg fade" id="gameResult" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="Game Result" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header" style="background-color: #c7acda">
+            <h1 class="modal-title title w-100 text-center" id="gameResultTitle">Game Result</h5>
+          </div>
+          <div class="modal-body" style="background-color: #f0d9ff">
+            <h4 id="result" class="p-1 m-1 resborder">Result: 2/5</h4>
+          </div>
+          <div class="modal-footer" style="background-color: #f0d9ff">
+            <div class="text-center">
+              <button class="btn sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset()">Play Again</button>
+              <button class="btn sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch()">Next Level</button>
+              <button class="btn sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame()">End Game</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End game results modal -->
   </div>
   <!-- Game screen container end-->
 
@@ -168,16 +189,7 @@
   <div id="endsn" class="d-none">
     <div class="container d-flex min-vh-100 flex-column align-items-center justify-content-center">
       <div class="row align-items-center justify-content-center">
-        <h4 id="result" class="p-1 col-6 resborder">Result: 2/5</h4>
         <div class="row flex-md-row flex-column align-items-center">
-          <button class="col-xs-9 mx-md-1 mt-1 col btn btn-light btn-lg" style="
-                background-color: #a17ed2;
-                border: 2px solid #6e609f;
-                color: #f0d9ff;
-              " onclick="sound(1), gameStart()" id="playAgainButton">
-            Play again
-          </button>
-          <button class="col-xs-9 mx-md-1 mt-1 col btn btn-light btn-lg sidebtn" onclick="sound(1), nextLevelF()" id="nextLevelButton">Next level</button>
           <button class="col-xs-9 mx-md-1 mt-1 col btn btn-light btn-lg sidebtn" onclick="homeMenu()">Home menu</button>
         </div>
       </div>
