--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div class="col d-flex flex-column align-items-center">
           <div>
-            <img class="img-fluid mt-4" src="./images/mate.png" alt="emoji"/>
+            <img id="gameSceneDog" class="img-fluid mt-4" src="./images/transition dog.png" alt="emoji"/>
           </div>
         </div>
       </div>
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="d-flex align-self-center justify-content-center">
-        <img class="img-fluid mt-4" src="./images/mate.png" alt="emoji"/>
+        <img id="endSceneDog" class="img-fluid mt-4" src="./images/mate.png" alt="emoji"/>
       </div>
       <div class="d-flex align-items-center justify-content-center">
         <div class="w-25">
