--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="d-flex flex-column align-items-center justify-content-center">
         <img class="img-fluid" src="images/Untitled_Artwork.png" alt="emoji"/>
         <div class="d-flex flex-row align-items-center justify-content-center">
-          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="gameStart(), sound(1)">Play</button>
+          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="gameStart(), sound(1)" id="playButton">Play</button>
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
 
           <!-- Modal -->
