--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="game.js"></script>
   <script src="scene_switcher.js"></script>
+  <script src="stats.js"></script>
   <link rel="icon" href="./images/FavLogo.png" type="image/icon type" />
 </head>
 
@@ -74,11 +75,6 @@
         </div>
         <div class="d-flex align-self-center justify-content-center">
           <img class="img-fluid mt-4" src="./images/mate.png" alt="emoji"/>
-        </div>
-        <div class="d-flex pb-1 flex-column align-items-end align-self-end fixed-bottom">
-          <div class="d-flex mb-2">
-            <button id="soundButtonHome" onclick="soundTurn(), sound(1)" class="m-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
-          </div>
         </div>
       </div>
     </div>
@@ -156,11 +152,6 @@
           </div>
         </div>
       </div>
-      <div class="d-flex pb-1 flex-column align-items-end align-self-end fixed-bottom">
-        <div class="d-flex mb-2">
-          <button id="soundButtonGame" onclick="soundTurn(), sound(1)" class="m-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
-        </div>
-      </div>
     </div>
     <!-- End game results modal -->
     <div class="modal modal-lg fade" id="gameResult" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="Game Result" aria-hidden="true">
@@ -178,9 +169,9 @@
             <div class="container-fluid">
               <div class="d-flex flex-row align-items-center justify-content-center">
                 <div class="text-center">
-                  <button class="btn sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset()">Play Again</button>
-                  <button class="btn sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch()">Next Level</button>
-                  <button class="btn sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame()">End Game</button>
+                  <button class="btn sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset(), closeModal()">Play Again</button>
+                  <button class="btn sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch(), closeModal()">Next Level</button>
+                  <button class="btn sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame(), closeModal()">End Game</button>
                 </div>
               </div>
             </div>
@@ -203,6 +194,7 @@
           <p class="m-1 title" id="playTime">Total play time:</p>
           <p class="m-1 title" id="totalRounds">Total rounds:</p>
           <p class="m-1 title" id="totalGames">Total games:</p>
+          <p class="m-1 title" id="totalAnswers">Total answers:</p>
           <p class="m-1 title" id="correctPoints">Correct answers:</p>
           <p class="m-1 title" id="incorrectPoints">Incorrect answers:</p>
         </div>
@@ -215,12 +207,10 @@
           <button class="btn btn-lg sidebtn text-nowarp text-center w-100" onclick="homeMenu()">Restart</button>
         </div>
       </div>
-      <div class="d-flex pb-1 flex-column align-items-end align-self-end fixed-bottom">
-        <div class="d-flex mb-2">
-          <button id="soundButtonEnd" onclick="soundTurn(), sound(1)" class="m-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
-        </div>
-      </div>
     </div>
+  </div>
+  <div class="m-2 position-fixed bottom-0 end-0">
+    <button id="soundButton" onclick="soundTurn(), sound(1)" class="m-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
   </div>
   <!-- End screen container end -->
 
