--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="d-flex flex-row align-items-center justify-content-center">
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="gameStart(), sound(1)" id="playButton">Play</button>
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
-          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn dropdown-toggle" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal Mode</button>
+          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal</button>
   
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0), sound(1)">Normal</a></li>
